--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
     <title>Elm App</title>
 </head>
 <body>
